--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="spotify.css"/>
+    <link rel="stylesheet" href="styles.css"/>
     <title>spotify clone</title>
     
   </head>
@@ -93,7 +93,7 @@
             <img src="playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Lullaby Rajkumari</span>
         </div>
     </div>
-    <script src="spotify.js"></script>
+    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/256da236a1.js" crossorigin="anonymous"></script>
   </body>
 
